# intel-gpu-tools

./: CONTRIBUTING.md  meson.build  meson.sh  meson_options.txt
assembler/: gram.y  main.c
benchmarks/: gem_busy.c  gem_exec_reloc.c  gem_exec_tracer.c  gem_latency.c  gem_wsim.c  kms_fb_stress.c  kms_vblank.c  meson.build
include/: intel_gpu_commands.h
lib/: dmabuf_sync_file.h  drmtest.c  drmtest.h  gen9_render.h  gpu_cmds.c  i915_pciids_local.h  igt_amd.c  igt_amd.h  igt_aux.c  igt_aux.h  igt_chamelium.c  igt_chamelium.h  igt_chamelium_stream.h  igt_core.c  igt_core.h  igt_debugfs.c  igt_device_scan.c  igt_device_scan.h  igt_draw.c  igt_draw.h  igt_drm_clients.c  igt_drm_clients.h  igt_drm_fdinfo.c  igt_drm_fdinfo.h  igt_drrs.c  igt_drrs.h  igt_dummyload.c  igt_eld.c  igt_fb.c  igt_frame.h  igt_gt.h  igt_halffloat.c  igt_hwmon.c  igt_kmod.c  igt_kmod.h  igt_kms.c  igt_kms.h  igt_ktap.c  igt_ktap.h  igt_multigpu.c  (+51 more)
man/: intel_reg.rst
opencl/: compute_increment_kernel.cl  gen_opencl_kernel
runner/: executor.c  job_list.c
scripts/: code_cov_parse_info  doc-tests-cross-check.sh  doc_to_xls.py  igt_doc.py  test_list.py  xls_to_doc.py
tests/: Makefile.sources  core_auth.c  core_getclient.c  core_getstats.c  core_getversion.c  core_hotunplug.c  core_setmaster.c  core_setmaster_vs_auth.c  (+54 more)
tests/intel-ci/: blacklist.txt  fast-feedback.testlist  meson.build  xe-fast-feedback.testlist  xe.blocklist.txt
tools/xe-perf/: i915_perf_recorder_commands.h  meson.build  xe_perf_configs.c  xe_perf_control.c  xe_perf_reader.c  xe_perf_recorder.c  xe_perf_recorder_commands.h
(+339 files in other folders)
