# Keep alphabetically sorted by default

intelci_files = [
  'README',
  'blacklist.txt',
  'blacklist-pre-merge.txt',
  'chamelium-only.testlist',
  'fast-feedback.testlist',
  'fast-feedback-chamelium-only.testlist',
  'meta.testlist',
  'xe.blocklist.txt',
  'xe-fast-feedback.testlist',
  'xe-fast-feedback-chamelium-only.testlist',
]

install_data(sources : intelci_files, install_dir : datadir)
